welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:1: error: Missing closing brace `}' assumed here
def hasTeen(a:Int, b:Int, c:Int): Boolean = {
^